tests/ui/reachable/expr_block.stderr
error: unreachable expression
  --> $DIR/expr_block.rs:10:9
   |
LL |         return;
   |         ------ any code following this expression is unreachable
LL |         22
   |         ^^ unreachable expression
   |
note: the lint level is defined here
  --> $DIR/expr_block.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable statement
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!`
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: unreachable statement
   |
  ::: $DIR/expr_block.rs:24:9
   |
LL |           return;
   |           ------ any code following this expression is unreachable
LL |           println!("foo");
   |           --------------- in this macro invocation

error: aborting due to 2 previous errors

